fixing hover effect blocked due to wrong z-index

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -42,5 +42,6 @@ img{
 }
 
 .hidden{
+    opacity: 0;
     display: none;
 }
